...
    <string name="hint_artist">Artista</string>
    <string name="hint_release_date">Fecha de lanzamiento</string>
    <string name="hint_record_label">Sello discográfico</string>
    <string name="hint_genre">Género</string>
    <string name="hint_description">Descripción</string>
    <string name="btn_save">Guardar</string>
    <string name="error_required_field">Campo requerido</string>
    <string name="error_invalid_date">Selecciona una fecha válida</string>
    <string name="create_album_success">¡Álbum creado exitosamente!</string>
    <string name="hint_album_cover">Añadir portada</string>
</resources>


